# 1337-MATCHA

./: .gitignore  Makefile  README.md  cleartables.sql  docker-compose.yml  package-lock.json
api/: Dockerfile  Makefile  README.md  create_tables.py  docker-compose.yaml  env_sample  insert_interests.py  migrate.py  pycrypto-2.6.1-cp312-cp312-macosx_14_0_arm64.whl  pyproject.toml  seed_profiles.py
api/app/: main.py
api/app/database/: database.py
api/app/helpers/: auth.py  db.py  functions.py  schemas.py  send_mail.py  utils.py
api/app/routers/: auth.py  routes.py  upload.py  users.py
api/app/template/: email_confirmation.html
api/migrations/: 003_drop_images_interests.sql  004_location_label.sql  005_social_constraints.sql  006_social_safety.sql  007_chat_messages.sql  008_notifications.sql  009_oauth_identities.sql  010_image_sort_order.sql  011_date_proposals.sql  012_unique_interests.sql  013_missing_constraints.sql
api/src/: main.py
api/src/core/: common_passwords.txt  config.py  deps.py  exceptions.py  password_policy.py  security.py
api/src/db/: database.py  helper.py
api/src/middleware/: cors.py  rate_limit.py
api/src/models/: chat_message.json  date_proposal.json  image.json  interest.json  notification.json  user.json  user_block.json  user_like.json  user_report.json  user_view.json
api/src/schemas/: __init__.py  auth.py  date.py  suggestion.py  user.py
api/src/seed/: profile_data.py
api/src/services/: auth_service.py  call_service.py  chat_service.py  date_service.py  email_service.py  location_service.py  location_utils.py  moderation_service.py  notification_service.py  (+7 more)
api/tests/: conftest.py  test_auth.py  test_call.py  test_chat.py  test_dates.py  test_errors.py  test_moderation.py  test_notifications.py  test_oauth.py  test_profile.py  test_security.py  test_seed_profiles.py  test_social.py  test_suggestions.py  test_ws.py
(+281 files in other folders)
