[tool.poetry]
name = "1337-matcha"
version = "0.1.0"
description = "1337 Matcha Project"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
psycopg = {extras = ["binary"], version = "^3.2.3"}
ruff = "^0.7.4"
passlib = "^1.7.4"
pydantic = {extras = ["email"], version = "^2.10.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
