[tool.poetry]
name = "1337-matcha"
version = "0.1.0"
description = "1337 Matcha Project"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.137.1"
uvicorn = {extras = ["standard"], version = "^0.49.0"}
psycopg = {extras = ["binary"], version = "^3.3.4"}
ruff = "^0.15.17"
bcrypt = "^4.3.0"
pydantic = {extras = ["email"], version = "^2.13.4"}
fastapi-mail = "^1.6.4"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
minio = "^7.2.20"
pillow = "^11.2.0"
python-multipart = "^0.0.32"
python-dotenv = "^1.2.2"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
